--- a/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook/Web.config
+++ b/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook/Web.config
@@ -11,7 +11,7 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-NeoTokyo.ProductionBook-20151221020413.mdf;Initial Catalog=aspnet-NeoTokyo.ProductionBook-20151221020413;Integrated Security=True"
+    <add name="ProductionBookContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=aspnet-NeoTokyo.ProductionBook1;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
@@ -75,6 +75,11 @@
     </assemblyBinding>
   </runtime>
   <entityFramework>
+    <contexts>
+      <context type="NeoTokyo.ProductionBook.DAL.ProductionBookContext, NeoTokyo.ProductionBook">
+        <databaseInitializer type="NeoTokyo.ProductionBook.DAL.ProductionBookInitializer, NeoTokyo.ProductionBook" />
+      </context>
+    </contexts>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework"/>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
