--- a/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook.csproj
+++ b/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook.csproj
@@ -185,6 +185,7 @@
     <Compile Include="Models\StaffResourceGroupLink.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModel\StaffResourceGroupViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
