--- a/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook.csproj
+++ b/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook.csproj
@@ -180,11 +180,16 @@
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\ResourceGroupController.cs" />
     <Compile Include="Controllers\StaffController.cs" />
+    <Compile Include="DAL\ProductionBookConfiguration.cs" />
     <Compile Include="DAL\ProductionBookContext.cs" />
     <Compile Include="DAL\ProductionBookInitializer.cs" />
+    <Compile Include="DAL\ProductionBookInterceptorLogging.cs" />
+    <Compile Include="DAL\ProductionBookInterceptorTransientErrors.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Logging\ILogger.cs" />
+    <Compile Include="Logging\Logger.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
