--- a/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook/Web.config
+++ b/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="ProductionBookContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=aspnet-NeoTokyo.ProductionBook3;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="ProductionBookContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=aspnet-NeoTokyo.ProductionBook4;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -72,11 +72,11 @@
     </assemblyBinding>
   </runtime>
   <entityFramework>
-    <contexts>
+    <!--<contexts>
       <context type="NeoTokyo.ProductionBook.DAL.ProductionBookContext, NeoTokyo.ProductionBook">
         <databaseInitializer type="NeoTokyo.ProductionBook.DAL.ProductionBookInitializer, NeoTokyo.ProductionBook" />
       </context>
-    </contexts>
+    </contexts>-->
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
