--- a/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook.csproj
+++ b/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook.csproj
@@ -212,6 +212,10 @@
     <Compile Include="Migrations\201512291631570_AddAddressCountryContactMethodEntities.Designer.cs">
       <DependentUpon>201512291631570_AddAddressCountryContactMethodEntities.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201512292239521_RollBackDatabaseToBeforeDesignEntityAdded.cs" />
+    <Compile Include="Migrations\201512292239521_RollBackDatabaseToBeforeDesignEntityAdded.Designer.cs">
+      <DependentUpon>201512292239521_RollBackDatabaseToBeforeDesignEntityAdded.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Address.cs" />
@@ -332,6 +336,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201512291631570_AddAddressCountryContactMethodEntities.resx">
       <DependentUpon>201512291631570_AddAddressCountryContactMethodEntities.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201512292239521_RollBackDatabaseToBeforeDesignEntityAdded.resx">
+      <DependentUpon>201512292239521_RollBackDatabaseToBeforeDesignEntityAdded.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
