Add and Delete DesignProcesses Working in DesignController

--- a/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook.csproj
+++ b/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook.csproj
@@ -325,6 +325,8 @@
     <Content Include="Views\Design\Details.cshtml" />
     <Content Include="Views\Design\Edit.cshtml" />
     <Content Include="Views\Design\Index.cshtml" />
+    <Content Include="Views\Shared\_DesignProcesses.cshtml" />
+    <Content Include="Views\Shared\_AddDesignProcess.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
