--- a/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook.csproj
+++ b/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook.csproj
@@ -176,6 +176,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\CustomerController.cs" />
     <Compile Include="Controllers\DepartmentController.cs" />
     <Compile Include="Controllers\DesignController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -225,11 +226,16 @@
     <Compile Include="Migrations\201512310150587_AddDesignProcessEntity.Designer.cs">
       <DependentUpon>201512310150587_AddDesignProcessEntity.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201601030046033_AddCustomerEntity.cs" />
+    <Compile Include="Migrations\201601030046033_AddCustomerEntity.Designer.cs">
+      <DependentUpon>201601030046033_AddCustomerEntity.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Address.cs" />
     <Compile Include="Models\ContactMethod.cs" />
     <Compile Include="Models\Country.cs" />
+    <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\Department.cs" />
     <Compile Include="Models\Design.cs" />
     <Compile Include="Models\Designer.cs" />
@@ -327,6 +333,11 @@
     <Content Include="Views\Design\Index.cshtml" />
     <Content Include="Views\Shared\_DesignProcesses.cshtml" />
     <Content Include="Views\Shared\_AddDesignProcess.cshtml" />
+    <Content Include="Views\Customer\Create.cshtml" />
+    <Content Include="Views\Customer\Delete.cshtml" />
+    <Content Include="Views\Customer\Details.cshtml" />
+    <Content Include="Views\Customer\Edit.cshtml" />
+    <Content Include="Views\Customer\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -363,6 +374,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201512310150587_AddDesignProcessEntity.resx">
       <DependentUpon>201512310150587_AddDesignProcessEntity.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201601030046033_AddCustomerEntity.resx">
+      <DependentUpon>201601030046033_AddCustomerEntity.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
