--- a/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook.csproj
+++ b/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook.csproj
@@ -176,6 +176,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\CountryController.cs" />
     <Compile Include="Controllers\CustomerController.cs" />
     <Compile Include="Controllers\DepartmentController.cs" />
     <Compile Include="Controllers\DesignController.cs" />
@@ -239,6 +240,10 @@
     <Compile Include="Migrations\201601031433011_AddNavigationToCustomerAndAddress.Designer.cs">
       <DependentUpon>201601031433011_AddNavigationToCustomerAndAddress.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201601101319359_AddDefaultAddressEntities.cs" />
+    <Compile Include="Migrations\201601101319359_AddDefaultAddressEntities.Designer.cs">
+      <DependentUpon>201601101319359_AddDefaultAddressEntities.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Address.cs" />
@@ -246,6 +251,8 @@
     <Compile Include="Models\Country.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\CustomerAddressLink.cs" />
+    <Compile Include="Models\CustomerDefaultDeliveryAddress.cs" />
+    <Compile Include="Models\CustomerDefaultInvoiceAddress.cs" />
     <Compile Include="Models\Department.cs" />
     <Compile Include="Models\Design.cs" />
     <Compile Include="Models\Designer.cs" />
@@ -258,6 +265,8 @@
     <Compile Include="Models\StaffResourceGroupLink.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModel\CustomerAddressLinkViewModel.cs" />
+    <Compile Include="ViewModel\CustomerAddressViewModel.cs" />
     <Compile Include="ViewModel\StaffResourceGroupViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -349,6 +358,12 @@
     <Content Include="Views\Customer\Edit.cshtml" />
     <Content Include="Views\Customer\Index.cshtml" />
     <Content Include="Views\Shared\_CustomerAddressLinks.cshtml" />
+    <Content Include="Views\Shared\_AddCustomerAddress.cshtml" />
+    <Content Include="Views\Country\Create.cshtml" />
+    <Content Include="Views\Country\Delete.cshtml" />
+    <Content Include="Views\Country\Details.cshtml" />
+    <Content Include="Views\Country\Edit.cshtml" />
+    <Content Include="Views\Country\Index.cshtml" />
     <None Include="Web.Debug_VS2015_PR.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -397,6 +412,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201601031433011_AddNavigationToCustomerAndAddress.resx">
       <DependentUpon>201601031433011_AddNavigationToCustomerAndAddress.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201601101319359_AddDefaultAddressEntities.resx">
+      <DependentUpon>201601101319359_AddDefaultAddressEntities.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
