--- a/ViewState.ProcessScheduler/ViewState.ProcessScheduler.Web.Tests/ViewState.ProcessScheduler.Web.Tests.csproj
+++ b/ViewState.ProcessScheduler/ViewState.ProcessScheduler.Web.Tests/ViewState.ProcessScheduler.Web.Tests.csproj
@@ -97,6 +97,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\CountryControllerTest.cs" />
+    <Compile Include="Controllers\ProcessControllerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
   </ItemGroup>
