--- a/ViewState.ProcessScheduler/ViewState.ProcessScheduler.Web.Tests/ViewState.ProcessScheduler.Web.Tests.csproj
+++ b/ViewState.ProcessScheduler/ViewState.ProcessScheduler.Web.Tests/ViewState.ProcessScheduler.Web.Tests.csproj
@@ -98,6 +98,7 @@
   <ItemGroup>
     <Compile Include="Controllers\CountryControllerTest.cs" />
     <Compile Include="Controllers\ProcessControllerTest.cs" />
+    <Compile Include="Controllers\DepartmentControllerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
   </ItemGroup>
