--- a/ViewState.ProcessScheduler/ViewState.ProcessScheduler.Web/ViewState.ProcessScheduler.Web.csproj
+++ b/ViewState.ProcessScheduler/ViewState.ProcessScheduler.Web/ViewState.ProcessScheduler.Web.csproj
@@ -150,6 +150,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\CountryController.cs" />
+    <Compile Include="Controllers\DepartmentController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ProcessController.cs" />
     <Compile Include="Global.asax.cs">
@@ -206,6 +207,8 @@
     <Content Include="Views\Process\Details.cshtml" />
     <Content Include="Views\Process\Create.cshtml" />
     <Content Include="Views\Process\Edit.cshtml" />
+    <Content Include="Views\Process\Deactivate.cshtml" />
+    <Content Include="Views\Department\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
