--- a/ViewState.ProcessScheduler/ViewState.ProcessScheduler.Services/ViewState.ProcessScheduler.Services.csproj
+++ b/ViewState.ProcessScheduler/ViewState.ProcessScheduler.Services/ViewState.ProcessScheduler.Services.csproj
@@ -30,6 +30,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AutoMapper, Version=4.2.0.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <HintPath>..\packages\AutoMapper.4.2.0\lib\net45\AutoMapper.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -82,6 +86,9 @@
       <Project>{8c8b34b4-eb97-4a59-ae6e-ad6afe1c1e7d}</Project>
       <Name>ViewState.ProcessScheduler.Model</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
