Changes to a lot of items

--- a/ViewState.ProcessScheduler/ViewState.ProcessScheduler.ViewModels/ViewState.ProcessScheduler.ViewModels.csproj
+++ b/ViewState.ProcessScheduler/ViewState.ProcessScheduler.ViewModels/ViewState.ProcessScheduler.ViewModels.csproj
@@ -46,6 +46,7 @@
     <Compile Include="ViewModels\CountryViewModel.cs" />
     <Compile Include="ViewModels\DepartmentViewModel.cs" />
     <Compile Include="ViewModels\ProcessViewModel.cs" />
+    <Compile Include="ViewModels\StaffViewModel.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
